force-app/main/default/objects/Account/fields/Anomalies_Summary__c.field-meta.xml
<CustomField>
    <fullName>Anomalies_Summary__c</fullName>
    <label>Anomalies Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>