force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>