force-app/main/default/objects/Account/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Borrower Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>