force-app/main/default/objects/Account/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <summarizedField>Opportunity.Outstanding_Balance__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>