force-app/main/default/objects/Account/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <summarizedField>Opportunity.Revenue__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>