force-app/main/default/objects/Account/fields/URLLink__c.field-meta.xml
<CustomField>
    <fullName>URLLink__c</fullName>
    <formula>IF(
True,
        HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/related/ClaimDetails__r&quot;, &quot;View Claim Details&quot;),
        HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, &quot;View Record&quot;)
   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URLLink</label>
    <type>Text</type>
</CustomField>