force-app/main/default/objects/Account/listViews/Mortgage_Accounts.listView-meta.xml
<ListView>
    <fullName>Mortgage_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Category__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Revenue__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Borrower</value>
    </filters>
    <label>Mortgage Accounts</label>
</ListView>